# cronopus

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  main.py  pyproject.toml
.sisyphus/plans/: auto-apply-agent.md
backend/: Dockerfile  entrypoint.sh  requirements.txt
backend/app/: AGENTS.md  config.py  database.py  main.py
backend/tests/: conftest.py  test_adapted_content.py  test_auth.py  test_compile_endpoint.py  test_compile_template_endpoint.py  test_cvs_endpoints.py  test_database.py  test_gemini_service.py  test_generate_cv_endpoint.py  test_generate_cv_service.py  test_jinja_render.py  test_jobs_endpoints.py  test_latex_compiler.py  test_models.py  test_profile.py  test_profile_data.py  test_profile_endpoints.py  test_profile_seed.py  test_sanitize_latex.py  test_seed_template.py  test_templates_endpoints.py
design/: prototype.html
docs/: cv_master_jinja.tex  profile.json
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: AGENTS.md  App.tsx  (+3 more)
scrapers/: AGENTS.md  Dockerfile.computrabajo  Dockerfile.practicas  __init__.py  base.py  computrabajo.py  database.py  orchestrator.py  practicas_pe.py  requirements-computrabajo.txt  requirements-practicas.txt  utils.py
scripts/: check_gemini_models.py  clear_jobs.py  run_computrabajo.py  run_practicas.py  seed_jobs.py  seed_profile.py  seed_template.py
telegram-bot/: Dockerfile  bot.py  run.py
tests/: test_env_config.py  test_infra.py  test_orchestration_7_2.py  test_runtime_deps_7_3.py  test_structure.py
(+80 files in other folders)
